11.05.07 - ingwa
	Cleaned searchcombobox.{h,cpp}
	Cleaned searchlistview.{h,cpp}
09.05.07 - tackat
    - Updated marble.desktop file 
    - Changes in DESIGN and TODO

09.05.07 - tackat
    - Marble got Tooltips and WhatsThis now. 
    - Applied patch by Ralf Habacker for improved icon support in Windows

08.05.07 - tackat
    - Marble got a docbook-handbook now. 

07.05.07 - tackat
    - Make KMarble compile again (KMainWindow -> KXmlGuiWindow)
    - Default to QTONLY = OFF

07.05.07 - tackat
    Added Copy, Export Map and Printing to the Qt interface.

06.05.07 - ingwa
	Cleaning: TextureMapper: use m_ for all members + getFoo() -> foo()
	Cleaning: KAtlasView:    use m_ for all members + getFoo() -> foo()
	Cleaning: KAtlasGlobe:   use m_ for all members.
	
05.05.07 - tackat
	Added the KDE interface

29.04.07 - ingwa
	Cleaned measuretool.{h,cpp}
	Cleaned katlasmapscale.{h,cpp}
	Cleaned katlaswindrose.{h,cpp}
	Cleaned katlascrosshair.{h,cpp}
	Cleaned placemarkinfodialog.{h,cpp}
	Cleaned maptheme.{h,cpp}

26.04.07 - ingwa
	Cleaned tilescissor.{h,cpp}
	
25.04.07 - ingwa
	Lots of small cleaning
	Cleaned placemarkmodel.{h,cpp}

23.04.07 - ingwa
	Fixed typo in MANIFESTO.txt
	Cleaned placemarkpainter.{h,cpp}
	Cleaned placemarkmanager.{h,cpp}
	
22.04.07 - ingwa
	Cleaned placemark.{h,cpp}
	Cleaned placecontainer.{h,cpp}
	Cleaned vectorcomposer.{h,cpp}
	
22.04.07 - ingwa
	First draft of the DESIGN file with headings, but lots of missing
	contents.

22.04.07 - murad/tackat
	Introducing m_dragThreshold in KAtlasInputHandler to get rid of
	extra repaints.